<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary_dark"
    android:orientation="vertical"
    tools:context=".model.PopActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="52dp"

                android:gravity="center"
                android:text="@string/article_data_created"
                android:textColor="#ffffff"
                android:textSize="30sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/category_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:text="@string/category_created"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/title_created"
                android:gravity="center"
                android:text="@string/title_created"
                android:textColor="#ffffff"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/subtitle_created"
                android:gravity="center"
                android:text="@string/subtitle_created"
                android:textColor="#ffffff"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/abstract_created"
                android:gravity="center"
                android:text="@string/abstract_created"
                android:textColor="#ffffff"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/body_created"
                android:gravity="center"
                android:text="@string/body_created"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/checkButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:clickable="true"
                app:backgroundTint="#FFFFFF"
                app:srcCompat="@drawable/ic_oki"
                android:focusable="true" />
        </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>