<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/spinner_categories"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/create_category"
                android:importantForAutofill="no"
                android:inputType="text" />
            <EditText
                android:id="@+id/text_create_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:ems="10"
                android:hint="@string/create_title"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/text_create_abstract"
                android:layout_width="362dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:hint="@string/create_abstract"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/text_create_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/create_subtitle"
                android:importantForAutofill="no"
                android:inputType="text" />
            <EditText
                android:id="@+id/text_create_body"
                android:layout_width="491dp"
                android:layout_height="127dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/create_body"
                android:importantForAutofill="no"
                android:inputType="text" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="378dp"
                android:layout_height="194dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/cancel_article_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:backgroundTint="#FFFFFF"
                    app:srcCompat="@drawable/ic_cancelbutton"
                    tools:ignore="MissingConstraints"
                    android:layout_marginStart="40dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/save_article_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="190dp"
                    android:clickable="true"
                    app:backgroundTint="#FFFFFF"
                    app:srcCompat="@drawable/ic_savearticle"
                    tools:ignore="MissingConstraints"
                    android:layout_marginStart="190dp"
                    android:focusable="true" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>