<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="600dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/myCard"
        android:layout_height="438dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="438dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="false"
                />

        <TextView
            android:id="@+id/newsCategory"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/category"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="378dp"
            android:layout_height="108dp"
            android:layout_below="@id/newsCategory"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/tittle"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

            <TextView
                android:id="@+id/newsAbstract"
                android:layout_width="371dp"
                android:layout_height="167dp"
                android:layout_below="@id/newsTitle"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/newsabstract"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/date_and_time"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/newsAbstract"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:inputType="time"
                tools:ignore="TextFields" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="268dp"
        android:layout_marginRight="268dp"
        android:layout_marginBottom="92dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_delete_black_24dp"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/modifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="270dp"
        android:layout_marginLeft="270dp"
        android:layout_marginBottom="92dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_update_black_24dp"
        android:focusable="true" />




</RelativeLayout>